AUTOMAKE_OPTIONS = parallel-tests

TEST_EXTENSIONS = .tcl
TCL_LOG_COMPILER = $(TCLSH) lib/runtest.tcl

TESTS = away-notify.tcl \
        chghost.tcl \
        echo-message.tcl \
        metadata.tcl \
        monitor.tcl \
        omode.tcl \
        privmsg.tcl \
        register.tcl \
        umodeg.tcl
