AUTOMAKE_OPTIONS = parallel-tests

TEST_EXTENSIONS = .tcl
TCL_LOG_COMPILER = $(TCLSH) lib/runtest.tcl

TESTS = away-notify.tcl \
        chghost.tcl \
        echo-message.tcl \
        extb_account.tcl \
        extb_canjoin.tcl \
        extb_channel.tcl \
        kick.tcl \
        metadata.tcl \
        mode-nooperkick.tcl \
        monitor.tcl \
        omode.tcl \
        privmsg.tcl \
        register.tcl \
        snomask-kline.tcl \
        topic.tcl \
        umodeg.tcl \
        yourid.tcl
