AUTOMAKE_OPTIONS = parallel-tests

TEST_EXTENSIONS = .tcl
TCL_LOG_COMPILER = $(TCLSH) lib/runtest.tcl

TESTS = away-notify.tcl \
        chghost.tcl \
        echo-message.tcl \
        kick.tcl \
        metadata.tcl \
        mode-nooperkick.tcl \
        monitor.tcl \
        privmsg.tcl \
        register.tcl \
        snomask-kline.tcl \
        topic.tcl \
        umodeg.tcl
